Adding my collabathon experience to my projects

--- a/CV.html
+++ b/CV.html
@@ -293,7 +293,7 @@ $(document).ready(function () {
 <div id="open-climate-collabathon-2019-consumer-disclosure-team-dec.-2019" class="section level4">
 <h4>Open Climate Collabathon 2019 | <a href="https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains">Consumer Disclosure Team</a> | Dec. 2019</h4>
 <ul>
-<li>Winner of the Community Choice award and the Most Innovative Contribution Award.</li>
+<li>Winner of the Community Choice award and the Most Innovative Contribution award.</li>
 <li>Outlined a framework for developing and reporting a “sustainability score” that would be used to grade the supply chain of a consumer product. The team also developed a proof-of-concept widget that could be added as a browser extension to report these scores on consumer websites.</li>
 <li>Contributed to the writing of the overarching framework and helped generate an example of an application for the project (the iPhone).</li>
 <li>Joined the 2020 discussions to help facilitate project management and next steps for future Collabathons.</li>
