--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@ $(document).ready(function () {
 <h3>Selected Projects:</h3>
 <ul>
 <li><a href="Final_Report.html">Data Science for Public Health</a> (Team Project)</li>
+<li><a href="https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains">Open Climate Collabathon 2019</a></li>
 <li>While you’re in NYC, <a href="dashboard_template.html">eat here not there</a></li>
 </ul>
 </p>
