--- a/CV.knit.html
+++ b/CV.knit.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Bryce Wong</title>
+<title></title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,9 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
-<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
-<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -219,37 +216,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Bryce Wong</h1>
 
 </div>
 
 
-<p><img src="images/profile.jpg" style="width:35%; margin-right: 50px" align="left"></p>
-<p align="right">
-<div id="about-bryce-sheherhers" class="section level3">
-<h3>About Bryce (she/her/hers):</h3>
-<p>Current data analyst at Crossix and passionate about the responsible use of data science to solve the toughest problems facing society.</p>
-<p>My graduate thesis explored the ethical implications of big data for public health. I proposed the use of qualitative research methods to investigate:</p>
-<ul>
-<li>The perceptions and agendas influencing biostatisticians and data scientists working in this field</li>
-<li>How data infrastructures are designed and managed for health technology</li>
-<li>The potential impact of such design and management choices on issues of normalization, oppression, and empowerment</li>
-</ul>
-<p>If you want to reach out and talk more about anything on this site that interests you, you can email me at: <a href="mailto:brycew.hello@gmail.com">brycew.hello@gmail.com</a></p>
-<p>See my <a href="CV.html">resume here</a></p>
-</div>
-<div id="selected-projects" class="section level3">
-<h3>Selected Projects:</h3>
-<ul>
-<li><a href="https://www.datakind.org/blog/applying-ai-to-societal-challenges-in-cities-communities-highlights-from-datakinds-virtual-datadive">Microsoft + DataKind AI in Cities Virtual DataDive</a></li>
-<li><a href="webtoons%20analysis%20june%2012.html">Exploratory Data Analysis of Text Comments on a Web-Based Health Comic</a>
-<ul>
-<li>Plus how I created a <a href="Webtoon_Comments.html">text data scraping algorithm</a></li>
-</ul></li>
-<li><a href="Final_Report.html">Assessing HIV/AIDS Trends and Disparities in NYC</a></li>
-</ul>
-</p>
-</div>
+
 
 
 
