updating whole website

--- a/CV.html
+++ b/CV.html
@@ -324,8 +324,8 @@ div.tocify {
 
 <div id="health-data" class="section level3">
 <h3>Health + Data</h3>
-<div id="crossix-a-veeva-company-senior-marketing-data-analyst-june-2019---present" class="section level4">
-<h4>Crossix, A Veeva Company | Senior Marketing Data Analyst | June 2019 - Present</h4>
+<div id="crossix-a-veeva-company-senior-analyst-marketing-analytics-june-2019---present" class="section level4">
+<h4>Crossix, A Veeva Company | Senior Analyst, Marketing Analytics | June 2019 - Present</h4>
 <ul>
 <li>Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive EHR, pharmacy, and claims data network through Crossix’s privacy-safe technology, SQL, and Apache Spark.</li>
 <li>Responsible for reviewing project deliverables for newer analysts, as well as for providing guidance on technical, conceptual, and communication-related processes.</li>
@@ -339,9 +339,9 @@ div.tocify {
 <div id="nysdohs-aids-institute-digital-health-intern-jan-2018---june-2019" class="section level4">
 <h4>NYSDOH’s AIDS Institute | Digital Health Intern | Jan 2018 - June 2019</h4>
 <ul>
-<li>Created and managed social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested.”<br />
+<li>Scraped/analyzed comments from an online forum with R to assess the impact of a web-based comic, “Tested,” that aims to educate young readers about health topics. Used tidyverse, ggplot, and tidytext to visualize and aggregate insights into markdown reports.</li>
+<li>Created and managed social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and the comic serial.<br />
 </li>
-<li>To improve program evaluation, created web-scraping algorithms in R and performed quantitative and qualitative analysis on collected social media comment data.</li>
 <li>Developed and led presentations on new tools and technologies for digital health promotion.</li>
 </ul>
 </div>
@@ -368,8 +368,8 @@ div.tocify {
 </div>
 <div id="education" class="section level3">
 <h3>Education</h3>
-<div id="master-of-public-health-may-2019-columbia-university-mailman-sph" class="section level4">
-<h4>Master of Public Health | May 2019 | Columbia University Mailman SPH</h4>
+<div id="master-of-public-health-columbia-university-mailman-sph" class="section level4">
+<h4>Master of Public Health | Columbia University Mailman SPH</h4>
 <ul>
 <li>Department: Sociomedical Sciences</li>
 <li>Certificate: Applied Biostatistics</li>
@@ -377,8 +377,8 @@ div.tocify {
 <li>Thesis: <em>How Data Determines Health: A Qualitative Research Proposal Exploring Perceptions of Big Data in Public Health</em></li>
 </ul>
 </div>
-<div id="bachelor-of-science-march-2017-university-of-california-los-angeles" class="section level4">
-<h4>Bachelor of Science | March 2017 | University of California, Los Angeles</h4>
+<div id="bachelor-of-science-university-of-california-los-angeles" class="section level4">
+<h4>Bachelor of Science | University of California, Los Angeles</h4>
 <ul>
 <li>Major: Cognitive Science</li>
 <li>Specialization in Computing</li>
