Updating title on about page

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ $(document).ready(function () {
 <p align="right">
 <div id="about-bryce-sheher" class="section level3">
 <h3>About Bryce (she/her):</h3>
-<p>Current data analyst at <a href="https://level.com/">Level</a> and passionate about the responsible use of data to solve the toughest problems facing society.</p>
+<p>Current data scientist at <a href="https://level.com/">Level</a> and passionate about the responsible use of data to solve the toughest problems facing society.</p>
 <p>If you want to reach out and talk more about anything on this site that interests you, you can email me at: <a href="mailto:brycew.hello@gmail.com" class="email">brycew.hello@gmail.com</a></p>
 <p>See my <a href="CV.html">resume here</a></p>
 </div>
